# apps/api/src/master-data/master-data.module.ts
@@ -4,6 +4,8 @@ import { VehicleMakesController } from './vehicle-makes/vehicle-makes.controller
 import { VehicleMakesService } from './vehicle-makes/vehicle-makes.service.js';
 import { VehicleModelsController } from './vehicle-models/vehicle-models.controller.js';
 import { VehicleModelsService } from './vehicle-models/vehicle-models.service.js';
+import { VehicleTypesController } from './vehicle-types/vehicle-types.controller.js';
+import { VehicleTypesService } from './vehicle-types/vehicle-types.service.js';
 
 /**
  * Global (non-tenant) reference data, served under /api/v1/master-data.
@@ -11,7 +13,11 @@ import { VehicleModelsService } from './vehicle-models/vehicle-models.service.js
  */
 @Module({
   imports: [DatabaseModule],
-  controllers: [VehicleMakesController, VehicleModelsController],
-  providers: [VehicleMakesService, VehicleModelsService],
+  controllers: [
+    VehicleMakesController,
+    VehicleModelsController,
+    VehicleTypesController,
+  ],
+  providers: [VehicleMakesService, VehicleModelsService, VehicleTypesService],
 })
 export class MasterDataModule {}
